k8s/auth-ingress.yaml
# auth-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnema-auth
  namespace: release-namespace-placeholder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [ release-auth-host-placeholder ]
      secretName: release-auth-tls-secret-placeholder
  rules:
    - host: release-auth-host-placeholder
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mnema-identity-account
                port:
                  number: 80
