k8s/ingress.yaml
# ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnema
  namespace: release-namespace-placeholder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - release-public-host-placeholder
      secretName: release-public-tls-secret-placeholder
  rules:
    - host: release-public-host-placeholder
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mnema-learning
                port:
                  number: 80
